# kajgg

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: publish-chatlib-py.yml  publish-chatlib-ts.yml
chat-api/: .dockerignore  main.py  pyproject.toml  test.py
chat-api/blueprints/: auth.py  messages.py
chat-api/blueprints/api/: auth.py  channels.py  emojis.py  files.py  invites.py  members.py  messages.py  typing.py  users.py  webhooks.py
chat-api/blueprints/gateway/: socket.py
chat-api/chat_types/events/: __init__.py  channel_created.py  event.py  event_type.py  message_created.py  message_updated.py
chat-api/chat_types/models/: __init__.py  author.py  channel.py  embed.py  emoji.py  file.py  flags.py  message.py  user.py
chat-api/modules/: auth.py  db.py  events.py  kv.py  mentions.py  r2.py  redis.py  resend.py  serializers.py  urls.py  utils.py
chat-api/types/events/: __init__.py  event.pyi  event_type.py
chat-api/types/models/: message.pyi
chat-web/: .env  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  wrangler.toml
chat-web/src/: globals.ts  index.css  index.tsx  main.tsx  react-twemoji.d.ts  routes.ts
chat-web/types/: index.ts
chatlib-py/: main.py
chatlib-ts/: README.md  package-lock.json  package.json  tsconfig.json
embeddings/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
media-proxy/: Dockerfile  README.md  main.py  pyproject.toml
portfolio/: Dockerfile
traefik/: Dockerfile  dynamic.yml  dynamic.yml.tmpl  traefik.yml
typegen/: generate.py  main.py  pyproject.toml
(+120 files in other folders)
