[project]
name = "chat-api"
version = "0.1.0"
description = "The main API for the chat application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.13.2",
  "aioredis>=2.0.1",
  "beanie>=2.0.1",
  "cuid2>=2.0.1",
  "python-dotenv>=1.2.1",
  "sanic>=25.3.0",
  "sanic-ext>=24.12.0",
  "sanic-routing>=23.12.0",
]
